Fixed bug where resume header is incorrect size on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -252,6 +252,7 @@ p {
 
 			h1 {
 				padding-top: 2rem;
+				font-size: 4em;
 			}
 		}
 
